--- a/index.html
+++ b/index.html
@@ -17,14 +17,29 @@
       </a>
       <nav id="nav-bar">
         <ul>
-          <li><a class="nav-link" href="#">Features</a></li>
-          <li><a class="nav-link" href="#">Specification</a></li>
-          <li><a class="nav-link" href="#">Pricing</a></li>
+          <li><a class="nav-link" href="#features">Features</a></li>
+          <li><a class="nav-link" href="#specs">Specification</a></li>
+          <li><a class="nav-link" href="#pricing">Pricing</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <h1>Savage 220 bolt action rifle</h1>
+      <div id="overview">
+        <div>
+          <img alt="savage 220 pic" src="https://cdn-savagearms.azureedge.net/-/media/dam/savage-arms/dam-media-bucket/2018/05/07/01/54/220-slug-18827-1254944.png" />
+        </div>
+        <p>Redefine slug accuracy with the 220 Slug Gun. The bolt-action platform is built like a rifle with features including the user-adjustable AccuTrigger™ system and a button-rifled, 22-inch, matte blued carbon steel barrel. It offers an oversized bolt handle and a tough synthetic stock. The receiver is drilled and tapped for mounting the scope of your choice, and the detachable box magazine holds two 20-gauge slugs.</p>
+      </div>
+      
+      <div id="features">
+      </div>
+
+      <div id="specs">
+      </div>
+      
+      <div id="pricing">
+      </div>
     </main>
   </body>
 </html>
