--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>Savage 220</title>
+    <title>Savage 220 Bolt Action Rifle</title>
   </head>
   <body>
     <header id="header">
@@ -24,22 +24,136 @@
       </nav>
     </header>
     <main>
-      <h1>Savage 220 bolt action rifle</h1>
-      <div id="overview">
+      <section id="overview">      
+        <h1>Savage 220 Slug Gun</h1>
         <div>
           <img alt="savage 220 pic" src="https://cdn-savagearms.azureedge.net/-/media/dam/savage-arms/dam-media-bucket/2018/05/07/01/54/220-slug-18827-1254944.png" />
         </div>
         <p>Redefine slug accuracy with the 220 Slug Gun. The bolt-action platform is built like a rifle with features including the user-adjustable AccuTrigger™ system and a button-rifled, 22-inch, matte blued carbon steel barrel. It offers an oversized bolt handle and a tough synthetic stock. The receiver is drilled and tapped for mounting the scope of your choice, and the detachable box magazine holds two 20-gauge slugs.</p>
-      </div>
+      </section>
       
-      <div id="features">
-      </div>
+      <section id="features">
+        <h1>Features</h1>
+        <ul>
+          <li>Bolt-action slug gun</li>
+          <li>User-adjustable AccuTrigger</li>
+          <li>Rugged synthetic stock</li>
+          <li>Button-rifled, 22-inch carbon steel barrel</li>
+        </ul>
+        <div id="purchase">
+          <a href="#">Locate Dealer</a>
+          <a href="#">Buy Now</a>
+        </div>
+      </section>
 
-      <div id="specs">
-      </div>
+      <section id="specs">
+        <h1>Specifications</h1>
+        <table>
+          <tr>
+            <td>SKU Number</td>
+            <td>18827</td>
+          </tr>
+          <tr>
+            <td>MSRP</td>
+            <td>$619.00</td>
+          </tr>
+          <tr>
+            <td>Action</td>
+            <td>Bolt</td>
+          </tr>
+          <tr>
+            <td>Barrel Color</td>
+            <td>Black</td>
+          </tr>
+          <tr>
+            <td>Barrel Finish</td>
+	    <td>Matte</td>
+          </tr>
+          <tr>
+            <td>Barrel Length</td>
+            <td>22"</td>
+          </tr>
+          <tr>
+            <td>Barrel Type</td>
+	    <td>Shotgun</td>
+          </tr>
+          <tr>
+            <td>Bolt Release Type</td>
+	    <td>Side</td>
+          </tr>
+          <tr>
+            <td>Caliber</td>
+	    <td>20 GA</td>
+          </tr>
+          <tr>
+            <td>Magazine Capacity</td>
+	    <td>2 Rounds</td>
+          </tr>
+          <tr>
+            <td>Gauge</td>
+            <td>20 GA</td>
+          </tr>
+          <tr>
+            <td>Hand</td>
+	    <td>Right</td>
+          </tr>
+          <tr>
+            <td>Length of Pull In</td>
+            <td>13.6"</td>
+          </tr>
+          <tr>
+            <td>Magazine</td>
+	    <td>Detachable Box Magazine</td>
+          </tr>
+          <tr>
+            <td>Overall Length</td>
+	    <td>44.75"</td>
+          </tr>
+          <tr>
+            <td>Rate of Twist</td>
+	    <td>24</td>
+          </tr>
+          <tr>
+            <td>Receiver Color</td>
+	    <td>Black</td>
+          </tr>
+          <tr>
+            <td>Receiver Finish</td>
+	    <td>Matte</td>
+          </tr>
+          <tr>
+            <td>Receiver Material</td>
+	    <td>Carbon Steel</td>
+          </tr>
+          <tr>
+            <td>Type</td>
+	    <td>Centerfire</td>
+          </tr>
+          <tr>
+            <td>Stock Color</td>
+	    <td>Black</td>
+          </tr>
+          <tr>
+            <td>Stock Finish</td>
+	    <td>Matte</td>
+          </tr>
+          <tr>
+            <td>Stock Material</td>
+	    <td>Synthetic</td>
+          </tr>
+          <tr>
+            <td>Stock Type</td>
+            <td>Sporter</td>
+          </tr>
+          <tr>
+            <td>Weight Lb</td>
+	    <td>7</td>
+          </tr>
+        </table>
+      </section>
       
-      <div id="pricing">
-      </div>
+      <section id="videos">
+      </section>
     </main>
   </body>
 </html>
